secretlist/4.pricelist-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: pricelist
    tier: frontend
  name: pricelist
  namespace: pricelist
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pricelist
      tier: frontend
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: pricelist
        tier: frontend
    spec:
      containers:
      - image: quay.io/redhatworkshops/pricelist:latest
        name: pricelist
        resources: {}
...
