secretlist/3.pricelist-db-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: mysql
    tier: database
  name: mysql
  namespace: pricelist
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: mysql
    tier: database
status:
  loadBalancer: {}
...
