secretlist/6.pricelist-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: pricelist
    tier: frontend
  name: pricelist-route
  namespace: pricelist
spec:
  host: ""
  port:
    targetPort: 8080
  to:
    kind: Service
    name: pricelist
    weight: 100
status:
  ingress:
  - conditions:
    - status: "True"
      type: Admitted
...
